Create sample crew added
